kustomize/overlays/staging/resources-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingest-worker
  namespace: grapevine-workers
spec:
  template:
    spec:
      containers:
        - name: ingest-worker
          resources:
            requests:
              cpu: 250m
              memory: '1Gi'
              ephemeral-storage: '4Gi'
            limits:
              cpu: '1'
              memory: '4Gi'
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: index-worker
  namespace: grapevine-workers
spec:
  template:
    spec:
      containers:
        - name: index-worker
          resources:
            requests:
              cpu: 250m
              memory: '1Gi'
            limits:
              cpu: '1'
              memory: '4Gi'
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cron-worker
  namespace: grapevine-workers
spec:
  template:
    spec:
      containers:
        - name: cron-worker
          resources:
            requests:
              cpu: 250m
              memory: '1Gi'
            limits:
              cpu: '1'
              memory: '4Gi'
